--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
+    "react-router": "^7.0.2",
     "react-router-dom": "^6.28.0",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.6",
